html to handlebars

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -22,9 +22,14 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
     <link rel="stylesheet" href="stylesheets/style.css">
+    <link href="stylesheets/instructor.css" rel="stylesheet">
+    <script
+        src="https://cdnjs.cloudflare.com/ajax/libs/malihu-custom-scrollbar-plugin/3.1.5/jquery.mCustomScrollbar.concat.min.js"></script>
 
-	</head>
-	<body>
-		{{{ body }}}
-	</body>
+</head>
+
+<body>
+    {{{ body }}}
+</body>
+
 </html>
