--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -153,6 +153,8 @@
                                 <input type="email" class="form-control" id="email-input1" placeholder="Email">
                             </div>
                             <div class="form-group">
+
+    {{!-- set a minimum length for the password using the minlength attribute. --}}
                                 <label for="exampleInputPassword1">Password</label>
                                 <input type="password" class="form-control" id="password-input1" placeholder="Password">
                             </div>
