--- a/views/instructors.handlebars
+++ b/views/instructors.handlebars
@@ -161,9 +161,9 @@
                         <br>
             {{!-- the line below will be visible only for getting all classes from all instructors --}}
             {{!-- maybe link instructor name to instructor's profile page --}}
-                        <h5 class="card-title">Instructor: {{InstructorId}}</h5>
+                        <li class="list-group-item"><h5 class="card-title">Instructor: {{InstructorId}}</h5></li>
                             <li class="list-group-item">Date and Time: {{datetime}}</li>
-                            <li class="list-group-item">Class Duration: {{duration}} hours</li>
+                            <li class="list-group-item">Class Duration: {{duration}}</li>
                             <li class="list-group-item">Class Capacity: {{capacity}} persons</li>
                             <li class="list-group-item">Price: {{price}}</li>
                         </ul>
@@ -176,11 +176,9 @@
 
                 {{else}}
                 <p>No classes available at the moment.</p>
-                <a href="#" class="btn btn-primary">Add class</a>
+                {{!-- <a href="#" class="btn btn-primary">New class</a> --}}
                 {{/each}}
             </div>
-
-
             {{!-- each row was meant to be a class --}}
             {{!-- <div class="row">
                     <div class="col-2">
@@ -366,7 +364,7 @@
                         </div>
                         <!-- Date and time input -->
                         <div class="form-group">
-                            <label class="control-label" for="date">Date and Time</label>
+                            <label for="date">Date and Start Time</label>
                             <input type="datetime-local" class="form-control" required="required" id="datetime"
                                 name="date" placeholder="YYYY-MM-DD" value="2020-04-12T19:30" min="2020-03-17T00:00"
                                 max="2027-03-17T00:00" />
@@ -374,21 +372,20 @@
                     </form>
                     <!-- Duration input -->
                     <div class="form-group">
-                        <label class="control-label" for="time">Class duration</label>
-                        <input type="time" class="form-control" required="required" id="time" />
+                        <label for="time">Class duration</label>
+                        <input type="number" class="form-control" required="required" id="time"/>
                     </div>
                     </form>
                     <div class="form-group">
                         <label for="capacity">Class capacity</label>
-                        <input type="number" required="required" class="form-control" id="capacity-input"
-                            placeholder="">
+                        <input type="number" required="required" class="form-control" id="capacity-input" placeholder="">
                     </div>
                     <div class="form-group">
                         <label for="price">Price: $</label>
                         <input type="number" required="required" class="form-control" id="price-input">
                     </div>
                     <br />
-                    <p>See all classes <a href="/classes/all">here</a></p>
+                    <p>See all classes <a href="/instructors">here</a></p>
                 </div>
                 <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
