modals for class details!

--- a/public/stylesheets/instructor.css
+++ b/public/stylesheets/instructor.css
@@ -190,5 +190,8 @@ footer{
     margin-top: 75px;
     margin-left: -20px;
     margin-right: -20px;
-    
+  }
+
+  .class-detail {
+      display: none;
   }
