--- a/views/students.handlebars
+++ b/views/students.handlebars
@@ -96,17 +96,8 @@
 
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ml-auto">
-                        <li class="nav-item active">
-                            <a class="nav-link" href="index.html">Home</a>
-                        </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">About</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Contact</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="#">Logout</a>
+                            <a class="nav-link" href="/logout">Logout</a>
                         </li>
                     </ul>
 
@@ -149,9 +140,9 @@
                                 <h5 class="card-title">Instructor: {{InstructorId}}</h5>
                             </li>
                             <li class="list-group-item">Date and Time: {{datetime}}</li>
-                            <li class="list-group-item">Class Duration: {{duration}}</li>
-                            <li class="list-group-item">Class Capacity: {{capacity}} persons</li>
-                            <li class="list-group-item">Price: {{price}}</li>
+                            <li class="list-group-item">Duration: {{duration}} Minutes</li>
+                            <li class="list-group-item">Capacity: {{capacity}} people</li>
+                            <li class="list-group-item">Price: ${{price}}</li>
                         </ul>
                         <button type="button" class="btn btn-primary view-class" data-toggle="modal"
                             data-target="#classDetails" data-class-id={{id}}>
