--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -19,6 +19,20 @@
                 <li class="nav-item">
                     <a class="nav-link" href="#">Contact</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link login-modal-btn mt-4 nav-signup-login btn btn-primary" data-toggle="modal"
+                        data-target=".bd-example-modal-lg-1">Log
+                        in</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link signup-modal-btn mt-4 nav-signup-login btn btn-primary" data-toggle="modal"
+                        data-target=".bd-example-modal-lg-1">Sign
+                        up</a>
+                </li>
+
+
+
+
             </ul>
 
         </div>
