userId - studentId bug fix, + valid to class form

--- a/views/students.handlebars
+++ b/views/students.handlebars
@@ -140,7 +140,7 @@
                                 <h5 class="card-title">Instructor: {{InstructorId}}</h5>
                             </li>
                             <li class="list-group-item">Date and Time: {{datetime}}</li>
-                            <li class="list-group-item">Duration: {{duration}} Minutes</li>
+                            <li class="list-group-item">Duration: {{duration}} minutes</li>
                             <li class="list-group-item">Capacity: {{capacity}} people</li>
                             <li class="list-group-item">Price: ${{price}}</li>
                         </ul>
@@ -239,7 +239,7 @@
                                     <h5 class="card-title">Instructor: {{InstructorId}}</h5>
                                 </li>
                                 <li class="list-group-item">Date and Time: {{datetime}}</li>
-                                <li class="list-group-item">Class Duration: {{duration}}</li>
+                                <li class="list-group-item">Class Duration: {{duration}} minutes</li>
                                 <li class="list-group-item">Class Capacity: {{capacity}} people</li>
                                 <li class="list-group-item">Price: {{price}}</li>
                             </ul>
