--- a/views/instructors.handlebars
+++ b/views/instructors.handlebars
@@ -150,7 +150,7 @@
                                 <h5 class="card-title">Instructor: {{InstructorId}}</h5>
                             </li>
                             <li class="list-group-item">Date and Time: {{datetime}}</li>
-                            <li class="list-group-item">Duration: {{duration}} Minutes</li>
+                            <li class="list-group-item">Duration: {{duration}} minutes</li>
                             <li class="list-group-item">Capacity: {{capacity}} people</li>
                             <li class="list-group-item">Price: ${{price}}</li>
                         </ul>
@@ -255,8 +255,8 @@
                         </form>
                         <!-- Duration input -->
                         <div class="form-group">
-                            <label for="time">Class duration</label>
-                            <input type="number" class="form-control" required="required" id="time" />
+                            <label for="time">Class duration (minutes)</label>
+                            <input type="number" min="1" max="50" class="form-control" required="required" id="time" />
                         </div>
                         </form>
                         <div class="form-group">
@@ -266,7 +266,7 @@
                         </div>
                         <div class="form-group">
                             <label for="price">Price: $</label>
-                            <input type="number" required="required" class="form-control" id="price-input">
+                            <input type="number" min="0" max="10000" required="required" class="form-control" id="price-input">
                         </div>
                         <br />
                         <p>See all classes <a href="/instructors">here</a></p>
@@ -305,7 +305,7 @@
                                     {{!-- the line below will be visible only for getting all classes from all instructors --}}
                                     {{!-- maybe link instructor name to instructor's profile page --}}
                                     <li class="list-group-item">
-                                        <h5 class="card-title">Instructor: {{InstructorId}}</h5>
+                                        {{!-- <h5 class="card-title">Instructor: {{InstructorId}}</h5> --}}
                                     </li>
                                     <li class="list-group-item">Date and Time: {{datetime}}</li>
                                     <li class="list-group-item">Class Duration: {{duration}}</li>
@@ -377,7 +377,7 @@
                             </div>
                             <!-- Duration edit -->
                             <div class="form-group">
-                                <label for="time">Class duration</label>
+                                <label for="time">Class duration (minutes)</label>
                                 <input type="number" class="form-control" required="required" id="duration-edit-{{id}}"
                                     value={{duration}} />
                             </div>
